--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2781,6 +2781,11 @@ input:focus {
   border-color: #676767;
 }
 
+@property --e-input---loading-angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
 .e-input {
   max-width: 448px;
   width: 100%;
@@ -2797,6 +2802,7 @@ input:focus {
   background: #fff;
   max-width: 448px;
   width: 100%;
+  margin: 0;
   padding: 12px 16px;
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
@@ -2866,11 +2872,50 @@ input:focus {
   border-color: #bdbdbd;
   cursor: not-allowed;
 }
-.e-input.e-input---readonly > input, .e-input.e-input---readonly > input:focus, .e-input.e-input---readonly > input:read-only, .e-input.e-input---readonly > input:read-only:focus {
+.e-input.e-input---readonly > input,
+.e-input.e-input---readonly > input:focus,
+.e-input.e-input---readonly > input:read-only,
+.e-input.e-input---readonly > input:read-only:focus {
   background: #fafafa;
   border: unset;
   color: #515151;
   padding: 12px 16px;
+}
+@supports (background: paint(something)) {
+  @keyframes eInputLoadingAnimation {
+    from {
+      --e-input---loading-angle: 0deg;
+    }
+    to {
+      --e-input---loading-angle: 180deg;
+    }
+  }
+  .e-input.e-input---loading > input:not(:focus),
+.e-input.e-input---loading > textarea:not(:focus) {
+    padding: 11px 15px;
+    border: solid 2px transparent;
+    border-radius: 4px;
+    background-image: linear-gradient(#fff, #fff), linear-gradient(var(--e-input---loading-angle), #29d305, transparent 35% 65%, #29d305);
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+    animation: 1.7s eInputLoadingAnimation cubic-bezier(0.95, 0.05, 0.05, 0.95) infinite;
+  }
+}
+@supports not (background: paint(something)) {
+  @keyframes eInputLoadingAnimation {
+    from {
+      border-color: #29d305;
+    }
+    to {
+      border-color: rgba(41, 211, 5, 0.1);
+    }
+  }
+  .e-input.e-input---loading > input:not(:focus),
+.e-input.e-input---loading > textarea:not(:focus) {
+    padding: 11px 15px;
+    border: solid 2px #29d305;
+    animation: 1s eInputLoadingAnimation ease alternate infinite;
+  }
 }
 .e-input input[type=date]::-webkit-calendar-picker-indicator,
 .e-input input[type=time]::-webkit-calendar-picker-indicator {
@@ -2922,7 +2967,10 @@ input:focus {
   border: 2px solid #29d305;
   padding: 3px 9px;
 }
-.e-form-field.e-form-field--compact .e-input.e-input---readonly > input, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:focus, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only:focus,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input:focus,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only:focus,
 .e-input.e-input--compact.e-input---readonly > input,
 .e-input.e-input--compact.e-input---readonly > input:focus,
 .e-input.e-input--compact.e-input---readonly > input:read-only,
@@ -2930,6 +2978,12 @@ input:focus {
   background: #fafafa;
   border: unset;
   color: #515151;
+  padding: 3px 9px;
+}
+.e-form-field.e-form-field--compact .e-input.e-input---loading > input,
+.e-form-field.e-form-field--compact .e-input.e-input---loading > textarea,
+.e-input.e-input--compact.e-input---loading > input,
+.e-input.e-input--compact.e-input---loading > textarea {
   padding: 3px 9px;
 }
 .e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon,
@@ -7820,7 +7874,7 @@ input:focus {
   left: 8px;
   background-color: #fff;
   padding: 0 3px;
-  height: 9px;
+  height: 11px;
   font-family: "Red Hat Text", Verdana, sans-serif;
   font-weight: 500;
   font-size: 10px;
