--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,7 +5,10 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white">
+      <!-- <elvia-datepicker></elvia-datepicker> -->
+      <elvia-datepicker [value]="date" [inlineStyle]="{ width: '100%' }"></elvia-datepicker>
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
