feat(calendar): reimplement multiple props

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -7,7 +7,7 @@
     <!--Normal version-->
     <div class="e-bg-white">
       <!-- <elvia-datepicker></elvia-datepicker> -->
-      <elvia-datepicker [value]="date" [inlineStyle]="{ width: '100%' }"></elvia-datepicker>
+      <elvia-datepicker [value]="date" isFullWidth="true"></elvia-datepicker>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
