--- a/packages/web/src/app/doc-pages/components/card-doc/card-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/card-doc/card-doc.component.html
@@ -25,14 +25,6 @@
           Use simple card when an icon together with a short title is enough information to describe the link.
         </ng-container>
         <ng-container ngProjectAs="sectionContent">
-          <app-component-subsubsection [sectionTitle]="'Square vs circle'">
-            <ng-container ngProjectAs="sectionContent">
-              It is mostly the visual that is the difference between them. The circle is less eye-catching
-              with transparent background and a circle upon hover. The square has a border and background with
-              a square hover. Also, the square has more options like border with color, and number instead of
-              icon.
-            </ng-container>
-          </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Visual item'">
             <ng-container ngProjectAs="sectionContent">
               Select between an icon or a number as a visual item. A number is used if you need a counter.
@@ -63,9 +55,9 @@
           Use detail card when you need to give more information about the link.
         </ng-container>
         <ng-container ngProjectAs="sectionContent">
-          <app-component-subsubsection [sectionTitle]="'Label'">
+          <app-component-subsubsection [sectionTitle]="'Tag'">
             <ng-container ngProjectAs="sectionContent">
-              If you need to categorize the cards you can add a label.
+              If you need to categorize the cards you can add a tag.
             </ng-container>
           </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Corner icon'">
@@ -82,8 +74,7 @@
   <!--IMPLEMENTATION-->
   <app-component-section [sectionTitle]="'Implementation'">
     <ng-container ngProjectAs="sectionContent">
-      To implement the card component as a link it must be wrapped in a link or an anchor tag. To avoid hard
-      refreshes of the webpage the links should use a router (e.g. Angular RouterModule or React Router).
+      To implement the card component as a link it must be wrapped in a link or an anchor tag.
       <app-component-example-generator
         [componentData]="cardLinkCode"
         [inlineExample]="true"
@@ -99,6 +90,13 @@
           Remember to wrap the card inside a link element
           <span class="code-text">&lt;a&gt;</span>
           to ensure correct HTML markup.
+        </ng-container>
+      </app-component-subsection>
+      <app-component-subsection [sectionTitle]="'Section Heading elements'">
+        <ng-container ngProjectAs="sectionContent">
+          Assign the correct heading level to the card heading using the
+          <span class="code-text">headingLevel</span>
+          attribute. Do not skip one or more heading levels.
         </ng-container>
       </app-component-subsection>
     </ng-container>
