add reset custom text button to ceg

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -90,6 +90,14 @@
               </div>
             </div>
           </div>
+          <div class="ceg-customize-popover-reset-btn">
+            <button class="e-btn e-btn--md e-btn--tertiary" (click)="resetCustomTextProps()">
+              <span class="e-btn__icon">
+                <i class="e-icon e-icon--reset" aria-hidden="true"></i>
+              </span>
+              <span class="e-btn__title">Reset text</span>
+            </button>
+          </div>
         </div>
       </elvia-popover>
     </div>
@@ -179,6 +187,14 @@
                 ></textarea>
               </div>
             </div>
+          </div>
+          <div class="ceg-customize-popover-mobile-reset-btn">
+            <button class="e-btn e-btn--md e-btn--tertiary" (click)="resetCustomTextProps()">
+              <span class="e-btn__icon">
+                <i class="e-icon e-icon--reset" aria-hidden="true"></i>
+              </span>
+              <span class="e-btn__title">Reset text</span>
+            </button>
           </div>
         </div>
       </elvia-popover>
