--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
@@ -83,6 +83,12 @@
       .ceg-customize-popover-trigger {
         white-space: nowrap;
       }
+      .ceg-customize-popover-reset-btn {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        margin-top: 24px;
+      }
     }
   }
 
@@ -107,6 +113,12 @@
       position: absolute;
       right: 56px;
       top: 8px;
+    }
+    .ceg-customize-popover-mobile-reset-btn {
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      margin-top: 24px;
     }
   }
 
