SASS: Automatic Migration for Slash as Division
See: https://sass-lang.com/documentation/breaking-changes/slash-div

--- a/packages/components/components/elvis-datepicker/src/react/style.scss
+++ b/packages/components/components/elvis-datepicker/src/react/style.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $text-light: #676767;
 $text-disabled: #bdbdbd;
 $text-placeholder: #676767;
@@ -12,11 +14,11 @@ $datepicker-max-width: 448px;
 
 $html-font-size: 16px;
 @function stripUnit($value) {
-  @return $value / ($value * 0 + 1);
+  @return math.div($value, $value * 0 + 1);
 }
 
 @function rem($pxValue) {
-  @return #{stripUnit($pxValue) / stripUnit($html-font-size)}rem;
+  @return #{math.div(stripUnit($pxValue), stripUnit($html-font-size))}rem;
 }
 
 .ewc-no-outline {
