--- a/packages/components/components/elvis-popover/src/react/style.scss
+++ b/packages/components/components/elvis-popover/src/react/style.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $popover-border-width: 1px;
 $popover-padding: 32px;
 $popover-button-offset: -30px;
@@ -8,11 +10,11 @@ $grey-05: #f4f4f4;
 
 $html-font-size: 16px;
 @function stripUnit($value) {
-  @return $value / ($value * 0 + 1);
+  @return math.div($value, $value * 0 + 1);
 }
 
 @function rem($pxValue) {
-  @return #{stripUnit($pxValue) / stripUnit($html-font-size)}rem;
+  @return #{math.div(stripUnit($pxValue), stripUnit($html-font-size))}rem;
 }
 
 .ewc-no-outline,
