--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
@@ -87,7 +87,7 @@
         display: flex;
         flex-direction: column;
         align-items: end;
-        margin-top: 24px;
+        margin-top: var(--e-spacing-24);
       }
     }
   }
@@ -118,7 +118,7 @@
       display: flex;
       flex-direction: column;
       align-items: end;
-      margin-top: 24px;
+      margin-top: var(--e-spacing-24);
     }
   }
 
