--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,7 +6,7 @@
     <!--Normal version-->
     <div class="e-bg-white">
       <!-- <elvia-datepicker></elvia-datepicker> -->
-      <elvia-datepicker [value]="date" isFullWidth="true"></elvia-datepicker>
+      <elvia-datepicker [value]="date" [minDate]="minDate" [maxDate]="maxDate"></elvia-datepicker>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
