revert changes done to web

--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.scss
@@ -231,7 +231,7 @@ $maxIconContainerMobile: 450px;
 
         font-family: 'Red Hat Display', Verdana, sans-serif;
         font-weight: 500;
-        font-size: helpers.toRem(14);
+        font-size: 14px;
         line-height: 16px;
       }
       .copy-text.hide {
