--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.scss
@@ -49,8 +49,8 @@
   .number {
     font-style: normal;
     font-weight: 500;
-    font-size: helpers.toRem(10);
-    line-height: 2;
+    font-size: 10px;
+    line-height: 20px;
     color: black;
   }
   .square {
