--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
@@ -2,7 +2,7 @@
 
 .e-list {
   .prop-element-title {
-    font-size: helpers.toRem(14);
-    line-height: 157.14%;
+    font-size: 14px;
+    line-height: 22px;
   }
 }
