--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.scss
@@ -35,8 +35,8 @@
           width: 100%;
 
           font-family: 'Red Hat Display', Verdana, sans-serif;
-          font-size: helpers.toRem(14);
-          line-height: 228.57%;
+          font-size: 38px;
+          line-height: 160%;
           letter-spacing: 0.2px;
 
           position: relative;
