--- a/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.scss
@@ -67,8 +67,8 @@
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-style: normal;
       font-weight: 400;
-      font-size: helpers.toRem(13);
-      line-height: 130.77%;
+      font-size: 13px;
+      line-height: 17px;
       letter-spacing: 0.012em;
       color: var(--e-grey-70);
     }
