--- a/packages/web/src/app/shared/copy/copy.component.scss
+++ b/packages/web/src/app/shared/copy/copy.component.scss
@@ -17,8 +17,8 @@
   }
 
   &__content {
-    line-height: 1.2;
-    font-size: helpers.toRem(16);
+    line-height: 120%;
+    font-size: 16px;
   }
 
   .copy-content {
