--- a/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
+++ b/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
@@ -101,8 +101,8 @@
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-style: normal;
       font-weight: 500;
-      font-size: helpers.toRem(12);
-      line-height: 116.67%;
+      font-size: 12px;
+      line-height: 14px;
       letter-spacing: 0.2px;
       color: var(--e-black);
       padding-top: 40px;
