--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.scss
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.scss
@@ -19,7 +19,7 @@ h1 {
 }
 h3 {
   font-family: 'Red Hat Display', Verdana, sans-serif;
-  font-size: 1.375rem;
+  font-size: 22px;
   margin-bottom: 32px;
 }
 ul {
@@ -27,7 +27,6 @@ ul {
   padding: 0;
 }
 li {
-  /* display: inline-block; */
   margin: 0 10px;
 }
 a {
