--- a/packages/web/src/app/doc-pages/components/stepper-doc/stepper-doc.component.scss
+++ b/packages/web/src/app/doc-pages/components/stepper-doc/stepper-doc.component.scss
@@ -62,8 +62,8 @@
 
         font-family: 'Red Hat Display', Verdana, sans-serif;
         font-weight: 700;
-        font-size: helpers.toRem(18);
-        line-height: 1.2;
+        font-size: 18px;
+        line-height: 120%;
       }
       .error {
         border: 2px solid var(--e-red);
