--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
@@ -557,7 +557,7 @@
                     align-items: center;
                     justify-content: center;
                     color: grey;
-                    font-size: 0.625rem;
+                    font-size: 10px;
                   "
                 >
                   CONTENT
@@ -577,7 +577,7 @@
                     align-items: center;
                     justify-content: center;
                     color: grey;
-                    font-size: 0.625rem;
+                    font-size: 10px;
                   "
                 >
                   CONTENT
@@ -596,7 +596,7 @@
                     align-items: center;
                     justify-content: center;
                     color: grey;
-                    font-size: 0.625rem;
+                    font-size: 10px;
                   "
                 >
                   CONTENT
