--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.scss
@@ -11,8 +11,8 @@
 pre {
   padding: 0;
   margin: 0;
-  font-size: helpers.toRem(14);
-  line-height: 128.57%;
+  font-size: 14px;
+  line-height: 18px;
   background: var(--e-grey);
 }
 
