--- a/packages/web/src/app/shell/footer/footer.component.scss
+++ b/packages/web/src/app/shell/footer/footer.component.scss
@@ -64,8 +64,8 @@
 
     .text-sm-custom {
       font-family: 'Red Hat Text', Verdana, sans-serif;
-      font-size: toRem(11);
-      line-height: 1.6;
+      font-size: 11px;
+      line-height: 160%;
       letter-spacing: 0.2px;
     }
     .text-align-center {
