--- a/packages/web/src/app/shell/header/header.component.scss
+++ b/packages/web/src/app/shell/header/header.component.scss
@@ -60,8 +60,8 @@
     &-links {
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-weight: 500;
-      font-size: helpers.toRem(12);
-      line-height: 116.67%;
+      font-size: 12px;
+      line-height: 14px;
       display: flex;
       align-items: center;
       letter-spacing: 0.8px;
@@ -132,8 +132,8 @@
         font-style: normal;
         text-transform: none;
         font-weight: 500;
-        font-size: helpers.toRem(15);
-        line-height: 113.33%;
+        font-size: 15px;
+        line-height: 17px;
       }
     }
 
@@ -145,8 +145,8 @@
     .version {
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-weight: 500;
-      font-size: helpers.toRem(12);
-      line-height: 116.67%;
+      font-size: 12px;
+      line-height: 14px;
       text-align: right;
       letter-spacing: 0.2px;
       color: var(--e-white);
@@ -179,8 +179,8 @@
         font-style: normal;
         text-transform: none;
         font-weight: 500;
-        font-size: helpers.toRem(15);
-        line-height: 113.33%;
+        font-size: 15px;
+        line-height: 17px;
         @include breakpoint-up(Mobile) {
           display: none;
         }
