remove rem from web (vol. 2)

--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.scss
@@ -60,13 +60,13 @@
       position: relative;
     }
     .profile-emoji {
-      font-size: helpers.toRem(58);
+      font-size: 58px;
       position: absolute;
       top: 5px;
       left: 36px;
       user-select: none;
       @include breakpoint-up(Mobile) {
-        font-size: helpers.toRem(44);
+        font-size: 44px;
         left: 186px - 44px;
       }
       &.right {
