--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/iframe-screen/iframe-screen.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/iframe-screen/iframe-screen.component.scss
@@ -68,7 +68,7 @@ iframe {
     position: absolute;
     top: 15px;
     font-family: 'Red Hat Display', Verdana, sans-serif;
-    font-size: helpers.toRem(14);
+    font-size: 14px;
     font-weight: 700;
   }
   &__elvia {
