--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.scss
@@ -35,8 +35,8 @@
           width: 100%;
 
           font-family: 'Red Hat Display', Verdana, sans-serif;
-          font-size: 38px;
-          line-height: 160%;
+          font-size: 14px;
+          line-height: 32px;
           letter-spacing: 0.2px;
 
           position: relative;
@@ -89,8 +89,8 @@
         width: 100%;
 
         font-family: 'Red Hat Text', Verdana, sans-serif;
-        font-size: helpers.toRem(14);
-        line-height: 1.6;
+        font-size: 14px;
+        line-height: 160%;
         .e-toggle {
           margin-left: 8px;
         }
