--- a/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
@@ -119,7 +119,7 @@
           class should be added to indicate that the text field is loading, for instance if the current value
           is being validated.
           <app-component-example-v1 [codeHTML]="loadingExample"></app-component-example-v1>
-          <div class="e-alert e-alert--info e-mt-16" role="alert">
+          <div class="e-alert e-alert--info e-mt-16" role="note">
             <div class="e-alert__icon">
               <i class="e-icon e-icon--information_circle e-icon--color-grey" aria-hidden="true"></i>
             </div>
