--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -84,7 +84,7 @@
             <!--NPM-->
             <app-component-subsubsection [sectionTitle]="'With NPM (alternative)'">
               <ng-container ngProjectAs="sectionContent">
-                <div class="e-alert e-alert--local e-alert--warn e-mb-32" role="alert">
+                <div class="e-alert e-alert--local e-alert--warn e-mb-32" role="note">
                   <div class="e-alert__icon">
                     <i class="e-icon e-icon--warning_circle e-icon--color-orange" aria-hidden="true"></i>
                   </div>
