--- a/packages/web/src/app/shared/when-to-use/when-to-use.component.scss
+++ b/packages/web/src/app/shared/when-to-use/when-to-use.component.scss
@@ -15,9 +15,15 @@
   .when-not-to-use {
     padding-left: 8px;
   }
+
   ul {
     padding-left: 22px;
+
+    li::first-letter {
+      text-transform: uppercase;
+    }
   }
+
   @include breakpoint-up(Mobile) {
     flex-direction: column;
     .when-to-use,
