fix: end value has mixed support, consider using flex-end

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
@@ -86,7 +86,7 @@
       .ceg-customize-popover-reset-btn {
         display: flex;
         flex-direction: column;
-        align-items: end;
+        align-items: flex-end;
         margin-top: var(--e-spacing-24);
       }
     }
@@ -117,7 +117,7 @@
     .ceg-customize-popover-mobile-reset-btn {
       display: flex;
       flex-direction: column;
-      align-items: end;
+      align-items: flex-end;
       margin-top: var(--e-spacing-24);
     }
   }
