--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -1243,22 +1243,22 @@
       </div>
 
       <div class="e-title-caps">Off</div>
-      <label class="e-toggle" role="switch">
+      <label class="e-toggle">
         Label
         <input class="e-toggle__input" type="checkbox" />
       </label>
       <div class="e-title-caps e-mt-24 e-mb-8">On</div>
-      <label class="e-toggle" role="switch">
+      <label class="e-toggle">
         Label
         <input class="e-toggle__input" type="checkbox" checked />
       </label>
       <div class="e-title-caps e-mt-24 e-mb-8">Disabled off</div>
-      <label class="e-toggle" role="switch">
+      <label class="e-toggle">
         Label
         <input class="e-toggle__input" type="checkbox" disabled />
       </label>
       <div class="e-title-caps e-mt-24 e-mb-8">Disabled on</div>
-      <label class="e-toggle" role="switch">
+      <label class="e-toggle">
         Label
         <input class="e-toggle__input" type="checkbox" checked disabled />
       </label>
